fix: types and names
