# laravel/app/Dtos/CarDetailDto.php
@@ -7,18 +7,18 @@ use App\Contracts\DtoInterface;
 readonly class CarDetailDto implements DtoInterface
 {
     public function __construct(
-        public int $id,
+        public string $id,
         public string $make,
         public string $model,
         public int $year,
-        public string $trim,
-        public string $horsepower,
-        public string $cylinders,
-        public string $displacement,
-        public string $fuel_type,
-        public string $transmission,
-        public string $body_class,
-        public string $image_url
+        public ?string $trim,
+        public ?string $horsepower,
+        public ?string $cylinders,
+        public ?string $displacement_l,
+        public ?string $fuel_type,
+        public ?string $transmission,
+        public ?string $body_class,
+        public ?string $image_url
     ) {}
 
     public static function fromArray(array $data): self
@@ -31,7 +31,7 @@ readonly class CarDetailDto implements DtoInterface
             trim: $data['trim'],
             horsepower: $data['horsepower'],
             cylinders: $data['cylinders'],
-            displacement: $data['displacement'],
+            displacement_l: $data['displacement_l'],
             fuel_type: $data['fuel_type'],
             transmission: $data['transmission'],
             body_class: $data['body_class'],
